--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "debug": "nodemon --inspect"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2",
     "sucrase": "^3.35.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
